fix profile pic distortion in followers/following lists (user_showpg)

--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -273,11 +273,13 @@ a.bip_link:hover {
   align-items: center;
 }
 
-.user_friend img {
+.user_friend_pp {
   width: 32px; height: 32px;
   border-radius: 50%;
   margin: 5px 10px;
+  overflow: hidden;
 }
+.user_friend_pp img { width: 32px; }
 
 .user_friend a, .user_friend a:active, .user_friend a:visited {
   color: #fff;
@@ -287,6 +289,7 @@ a.bip_link:hover {
 .user_friend a:hover {
   color: #f00;
   cursor: crosshair;
+  text-decoration: line-through;
 }
 
 
